# osc-metadata-client

./: .gitignore  404.html  CHANGELOG.md  Taskfile.yaml  index.html  mkdocs.yaml  pyproject.toml
.github/workflows/: oci_publish.yaml
c4/components/workflow/publish_experiment_products/: index.html
c4/components/workflow/publish_workflow/: index.html
cli/: index.html
command-line-tools/osc-metadata-client/: Dockerfile
command-line-tools/osc-metadata-client/src/osc_metadata_client/: __init__.py  cli.py  experiment.py  osc_extension.py  product.py
command-line-tools/osc-metadata-client/tests/: conftest.py  test_cli.py  test_init_workflow_experiment_product.py  test_themes_extension.py
cwl-workflow/: publish_experiment_products.cwl  publish_workflow.cwl
cwl-workflow_templates/: publish_experiment_products.cwl  publish_workflow.cwl
cwl-workflows/: .env  git_repository.cwl  publish_experiment_products.cwl  publish_workflow.cwl
diagrams/src/flow/: experiments.puml  products.puml  workflow.puml
diagrams/src/sequence/: experiments.puml  products.puml  workflow.puml
docs/c4/components/workflow/: publish_experiment_products.md  publish_workflow.md
search/: search_index.json
src/osc_metadata_client/: cli.py  experiment.py  models.py  product.py  themes_extension.py  workflow.py
tests/: conftest.py  test_about_models_osc_extension.py  test_themes_extension.py
