[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osc-metadata-client"
dynamic = ["version"]
description = 'Open Science Catalog client'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Simone Tripodi", email = "simone.tripodi@terradue.com" },
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click==8.3.3",
  "loguru==0.7.3",
  "ogc-api-processes-client==0.5.0",
  "pydantic==2.13.4",
  "session-adapters==0.3.0",
  "transpiler-mate==0.44.0",
  "pystac==1.14.3"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Terradue/osc-metadata-client#readme"
Issues = "https://github.com/Terradue/osc-metadata-client/issues"
Source = "https://github.com/Terradue/osc-metadata-client"

[project.scripts]
osc-metadata-client = "osc_metadata_client.cli:main"

[tool.hatch.version]
path = "src/osc_metadata_client/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/osc_metadata_client tests}"

[tool.coverage.run]
source_pkgs = ["osc_metadata_client", "tests"]
branch = true
parallel = true
omit = [
  "src/osc_metadata_client/__about__.py",
]

[tool.coverage.paths]
osc_metadata_client = ["src/osc_metadata_client", "*/osc-metadata-client/src/osc_metadata_client"]
tests = ["tests", "*/osc-metadata-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
description = "Test environment"
dependencies = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-q = "pytest -q"
test-cov = "pytest --cov=opensearch_gateway"
test-show-setup = "pytest --setup-show"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.dev]
description = "Development environment"
dependencies = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff",
]


[tool.hatch.envs.dev.scripts]
lint = "ruff format ."
check = "ruff check --fix"
